...
        screenOptions={{
            tabBarIconStyle: {display: 'none'},
            tabBarLabelPosition: 'beside-icon',
        }}>
        <Tab.Screen
            name={TabNavigation.MOVIES}
            options={{title: 'Danh sách phim'}}
            component={MoviesScreen}
        />
        <Tab.Screen
            name={TabNavigation.MOVIES_FAVORITE}
            options={{title: 'Phim đã thích'}}
            component={MoviesFavoriteScreen}
...
